# LDPC-Iterative-Bit-Flipping-family-decoders

./: !ldpc_encode.m  3x25x480.txt  4x36x500.txt  74x6x128.txt  9x75x128.txt  README.md  ldpc_bf.m  ldpc_encode.m  ldpc_h2g.c  ldpc_h2g.m  ldpc_h2g.mexw64  ldpc_irrwbf.m  ldpc_iwbf.m  ldpc_wbf.m  main_ldpc_dB_test.m  mex_ldpc_encoder_build.m
bf-tests-awgn-egldpc_0.2.orig/bf-tests-awgn-egldpc-0.2/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  autogen-clean.sh  config.h.in  configure  configure.ac
bf-tests-awgn-egldpc_0.2.orig/bf-tests-awgn-egldpc-0.2/devcpp/: bf-tests-awgn-egldpc.dev
bf-tests-awgn-egldpc_0.2.orig/bf-tests-awgn-egldpc-0.2/src/: Makefile.am  Makefile.in  simula.c
bf-tests-awgn-egldpc_0.2.orig/bf-tests-awgn-egldpc-0.2/src/extras/: extras.h  mirandom.h  simula.h  sparse.h  vector.h
bf-tests-awgn-ldgm-0.2/: ChangeLog  Makefile.am  Makefile.in  NEWS  configure  configure.ac
bf-tests-awgn-ldgm-0.2/devcpp/: bf-tests-awgn-ldgm.dev  config.h
bf-tests-awgn-ldgm-0.2/doc/: Makefile.am
bf-tests-awgn-ldgm-0.2/doc/sgml/: Makefile.am
bf-tests-awgn-ldgm-0.2/src/: Makefile.am  Makefile.in  simula.c
bf-tests-awgn-ldgm-0.2/src/extras/: extras.h  simula.h  sparse.h  vector.h
