## Subdirectorios que se incluiran en el paquete.tar.gz osea en las DIST
## Solo ene stos directorios buscara Makefile.am las AutoTools
SUBDIRS = src doc 


## Archivos que se incluiran en el paquete.tar.gz osea la DIST 
EXTRA_DIST = AUTHORS ChangeLog NEWS README COPYING autogen.sh autogen-clean.sh devcpp/bf-tests-awgn-ldgm.dev devcpp/config.h
