## Lista de programas que se crearan
bin_PROGRAMS = bf-tests-awgn-egldpc

## Dependencia del programa nombre-programa1
## subdirectorios automaticamente se agregan a paquete.tar.gz osea a la DIST
bf_tests_awgn_egldpc_SOURCES = simula.c \
	extras/simula.h \
	extras/extras.h \
	extras/mirandom.h \
	extras/sparse.h \
	extras/vector.h

bf_tests_awgn_egldpc_LDADD  = -lm

